--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -12,6 +12,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^0.18.5",
     "@expo/metro-config": "^0.7.1",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^4.29.5",
@@ -22,9 +23,10 @@
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.3",
+    "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
-    "nativewind": "^2.0.11",
+    "expo-web-browser": "~12.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
@@ -35,7 +37,6 @@
   "devDependencies": {
     "@acme/api": "^0.1.0",
     "@acme/eslint-config": "^0.1.0",
-    "@acme/tailwind-config": "^0.1.0",
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "@babel/runtime": "^7.21.5",
@@ -46,7 +47,6 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.42.0",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
