--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -16,6 +16,7 @@
     "@acme/api": "^0.1.0",
     "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
+    "@clerk/nextjs": "^4.21.8",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.5",
     "@trpc/client": "^10.27.1",
@@ -26,20 +27,18 @@
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server": "link:@clerk/nextjs/server",
     "superjson": "1.9.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@acme/eslint-config": "^0.1.0",
-    "@acme/tailwind-config": "^0.1.0",
     "@types/node": "^18.16.5",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
     "dotenv-cli": "^7.2.1",
     "eslint": "^8.42.0",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   }
 }
