--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -14,24 +14,33 @@
   "dependencies": {
     "@clerk/clerk-expo": "^0.18.5",
     "@expo/metro-config": "^0.7.1",
+    "@expo/vector-icons": "^13.0.0",
+    "@hookform/resolvers": "^3.1.1",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^4.29.5",
     "@trpc/client": "^10.27.1",
     "@trpc/react-query": "^10.27.1",
     "@trpc/server": "^10.27.1",
     "expo": "^48.0.19",
+    "expo-apple-authentication": "~6.0.1",
+    "expo-auth-session": "~4.0.3",
     "expo-constants": "~14.2.1",
+    "expo-font": "~11.1.1",
+    "expo-image": "~1.0.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.3",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-native": "0.71.8",
-    "react-native-safe-area-context": "4.5.3",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "superjson": "1.9.1"
   },
   "devDependencies": {
