--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:generate": "turbo db:generate",
     "db:push": "turbo db:push db:generate",
     "db:studio": "pnpm -F db dev",
-    "dev": "turbo dev --parallel",
+    "dev": "turbo dev --parallel -vvv",
     "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,md,json}\" --ignore-path .gitignore",
     "lint": "turbo lint && manypkg check",
     "lint:fix": "turbo lint:fix && manypkg fix",
